--- a/sass/_layout-grids.scss
+++ b/sass/_layout-grids.scss
@@ -111,11 +111,11 @@
     }
   }
   @include media('>small-screen') {
-    & :nth-child(odd) {
+    & > :nth-child(odd) {
       $size: ($grid-left / ($grid-left + $grid-right)) * 100%;
       width: calc(#{$size} - #{$newgutter});
     }
-    & :nth-child(even) {
+    & > :nth-child(even) {
       $size: ($grid-right / ($grid-left + $grid-right)) * 100%;
       width: calc(#{$size} - #{$newgutter});
     }
